# shopper

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.db  database.py  main.py  schema.py  utils.py
backend/app/routers/: address.py  auth.py  googleAPI.py  user.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  api.js  hooks.js
frontend/src/components/: AddressDropdown.jsx  Addresses.jsx  Calculator.jsx  FormInput.jsx  StateDropdown.jsx
frontend/src/context/: AuthContext.jsx  UserContext.jsx
frontend/src/pages/: MainPage.jsx  SignInPage.jsx  SignUpPage.jsx
frontend/src/style/: AddressDropdown.css  Addresses.css  Calculator.css  FormInput.css  MainPage.css  SignInPage.css  SignUpPage.css
shopper-backup/: config  packed-refs
shopper-backup/objects/pack/: pack-9994ddfb0de9b179cfbf91d53cba9d6941212dab.idx
