[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rachelmalbert <albert.rachelm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
geopy = "^2.4.1"
jose = "^1.0.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
sqlmodel = "^0.0.22"
python-multipart = "^0.0.20"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
python-jose = "^3.3.0"
mangum = "^0.19.0"
pydantic = "^2.10.4"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "app"  # This should match the name of your package directory
